# kukuapi

./: .gitignore  .installed  Cargo.toml  config.yaml  test_gateway.py  test_gateway.sh
deploy/: Dockerfile  Wedevs_VPS_Operations.md  docker-compose.yml  kukuapi.service
frontend/: tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/components/account/: CreateAccountModal.vue  EditAccountModal.vue
frontend/src/components/layout/: AppHeader.vue
frontend/src/components/user/profile/: ProfileInfoCard.vue
frontend/src/i18n/locales/: en.ts  zh.ts
frontend/src/views/: HomeView.vue
frontend/src/views/user/: ProfileView.vue  RedeemView.vue
src/: lib.rs  main.rs
src/admin/: api_keys.rs  dashboard.rs  mod.rs  settings.rs  users.rs
src/apicompat/: agnes_compat.rs  anthropic_to_openai.rs  deepseek_compat.rs  mod.rs  openai_to_anthropic.rs  streaming.rs
src/billing/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/db/migrations/: 20260704000001_initial_schema.sql  mod.rs
src/db/models/: api_key.rs  group.rs  mod.rs  oauth_state.rs  settings.rs  subscription.rs  usage.rs  user.rs
src/db/repositories/: api_key_repo.rs  billing_repo.rs  mod.rs  settings_repo.rs  usage_repo.rs  user_repo.rs
src/gateway/: mod.rs
src/middleware/: api_key_auth.rs  mod.rs
src/oauth/: claude.rs  gemini.rs  mod.rs  openai.rs
src/proxy/: mod.rs  streaming.rs
src/routes/: mod.rs
src/tls_fingerprint/: mod.rs
src/types/: agnes.rs  anthropic.rs  deepseek.rs  mod.rs  openai.rs
src/ws/: mod.rs
tests/: integration_tests.rs
tools/: docker-compose.forward-bench.yml  forward_loadgen.go  forward_loadgen_test.go  mock_openai_upstream.py  probe_newapi_model_mapping.md  probe_newapi_model_mapping.py  probe_newapi_model_mapping.sh  run_local_forward_bench.sh  test_probe_newapi_model_mapping.py
